FusionDev Backup1/src/objects/Lead_Assignment_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lead_Assignment_Rules_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <externalId>true</externalId>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <externalId>true</externalId>
        <label>Zip Code</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Lead Assignment Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Zip_Code__c</columns>
        <columns>State__c</columns>
        <columns>Sales_Rep__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>By_State</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>State__c</columns>
        <columns>Sales_Rep__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead_Assignment_Rule__c.By_State</value>
        </filters>
        <label>By State</label>
    </listViews>
    <listViews>
        <fullName>By_Zip</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Zip_Code__c</columns>
        <columns>Sales_Rep__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead_Assignment_Rule__c.By_Zip</value>
        </filters>
        <label>By Zip</label>
    </listViews>
    <nameField>
        <label>Lead Assignment Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Assignment Rules</pluralLabel>
    <recordTypes>
        <fullName>By_State</fullName>
        <active>true</active>
        <label>By State</label>
    </recordTypes>
    <recordTypes>
        <fullName>By_Zip</fullName>
        <active>true</active>
        <label>By Zip</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>By_State</fullName>
        <active>true</active>
        <description>A zip code value is not allowed for the By State record type.</description>
        <errorConditionFormula>AND(RecordType.DeveloperName==&apos;By_State&apos;,Zip_Code__c&lt;&gt;&apos;&apos;)</errorConditionFormula>
        <errorMessage>A zip code value is not allowed for the By State record type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>By_Zip</fullName>
        <active>true</active>
        <description>A state value is not allowed for the By Zip record type.</description>
        <errorConditionFormula>AND(RecordType.DeveloperName==&apos;By_Zip&apos;,State__c&lt;&gt;&apos;&apos;)</errorConditionFormula>
        <errorMessage>A state value is not allowed for the By Zip record type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Rep_Is_Required</fullName>
        <active>true</active>
        <description>A valid Sales Rep is required.</description>
        <errorConditionFormula>OR(ISNULL(Sales_Rep__c),Sales_Rep__c==&apos;&apos;)</errorConditionFormula>
        <errorMessage>A valid Sales Rep is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>State_is_Required_for_By_State_RT</fullName>
        <active>true</active>
        <description>State is required for By State record Type.</description>
        <errorConditionFormula>AND(RecordType.DeveloperName==&apos;By_State&apos;,State__c==&apos;&apos;)</errorConditionFormula>
        <errorMessage>State is required for By State record Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Zip_Code_is_Required_for_By_Zip_RT</fullName>
        <active>true</active>
        <description>Zip Code is required for By Zip record Type.</description>
        <errorConditionFormula>AND(RecordType.DeveloperName==&apos;By_Zip&apos;,Zip_Code__c==&apos;&apos;)</errorConditionFormula>
        <errorMessage>Zip Code is required for By Zip record Type.</errorMessage>
    </validationRules>
</CustomObject>